--- a/.github/workflows/seqparser_Actions.yml
+++ b/.github/workflows/seqparser_Actions.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+	pip install pytest
         pip install .
-    - name: Analysing the code with pylint
+    - name: Test installation of seqparser package
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pytest -v
