--- a/.github/workflows/seqparser_Actions.yml
+++ b/.github/workflows/seqparser_Actions.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-	pip intall -U pytest
+	pip install -U pytest
 	pip install .
     - name: Test installation of seqparser package
       run: |
