--- a/.github/workflows/seqparser_testing.yml
+++ b/.github/workflows/seqparser_testing.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: seqparser_testing
 
 on: [push]
 
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+	pip install .
     - name: Analysing the code with pylint
       run: |
         pylint `ls -R|grep .py$|xargs`
