--- a/.github/workflows/seqparser_testing.yml
+++ b/.github/workflows/seqparser_testing.yml
@@ -17,8 +17,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-	pip install .
-    - name: Analysing the code with pylint
+        pip install .
+	python -m pip install flake8 pytest
+
+    - name: Test seqparser module after installation
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pytest
