--- a/.github/workflows/seqparser_testing.yml
+++ b/.github/workflows/seqparser_testing.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-	python -m pip install flake8 pytest
+	python -m pip install pytest
 
     - name: Test seqparser module after installation
       run: |
