--- a/.github/workflows/seqparser_testing.yml
+++ b/.github/workflows/seqparser_testing.yml
@@ -1,6 +1,6 @@
 name: seqparser_testing
 
-on: push
+on: [push]
 
 jobs:
   build:
@@ -18,7 +18,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 	pip install .
-
     - name: Test seqparser module after installation
       run: |
         pytest
